--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node index.js",
-        "dev": "nodemon index.js"
+        "dev": "nodemon index.js",
+        "seed": "node seeds/seed.js"
     },
     "keywords": [],
     "author": "",
@@ -18,6 +19,7 @@
         "dotenv": "^16.5.0",
         "express": "^4.21.2",
         "jsonwebtoken": "^9.0.2",
+        "marked": "^15.0.12",
         "mongoose": "^8.15.0"
     },
     "devDependencies": {
